
* Heatmap editor, Vehicle brand editor, Vehicle class editor
  - Add "Offset" button for batch offsetting temperature values in Heatmap editor.
  - Add "Copy" button for duplicate heatmap preset in Heatmap editor.
  - Keep "Rename" dialog open after renaming for easy access in Vehicle brand editor.
  - Show close confirmation if changes were not saved.
  - Show deletion info and confirmation.

* Misc
  - Updated contributors info, added new contributor "Tanizo Yashima (yashiman)".

2.19.1 (2024-10-18)
-----------------------------
* Brake wear Widget
  - Separated "front_brake_failure_thickness, rear_brake_failure_thickness" options
    for front and rear brakes.
    Front brake failure thickness threshold can be different from rear brake.
  - Some reference brake failure thickness threshold:
    Hypercar and P2 classes in LMU usually have 25mm brake failure threshold.
    GTE class in LMU usually has 30mm brake failure threshold.

* Cruise Widget
  - Add "enable_track_clock_synchronization" option, which enables auto track clock
    and time scale synchronization. RestAPI module must be enabled to synchronize
    track clock from Rest API. This option is enabled by default.
    Disable this option to manually set and use "track_clock_time_scale" option for
    track clock display.

2.19.0 (2024-10-15)
-----------------------------
* RestAPI Module
  - Read "brake wear" data from LMU Rest API.

* [New]Brake wear Widget
  - Show brake wear data in percentage or millimeter thickness.
    Important note:
    Brake wear data is currently only available on LMU.
    RF2 currently doesn't provide brake wear data.
    Depends on vehicle, brake may or may not have noticeable wear.
    Additional note:
    Brake maximum thickness (for percentage wear calculation) is retrieved at the moment
    when car leaves garage or has brake repaired or changed.
    Reloading a preset or restarting APP in the middle of a running stint could result