@@ -236,11 +236,15 @@ WIDGET_DEFAULT = {
         "odometer_maximum_digits": 8,
         "font_color_odometer": "#FFFFFF",
         "bkg_color_odometer": "#222222",
+        "show_distance_into_lap": True,
+        "font_color_distance_into_lap": "#FFFFFF",
+        "bkg_color_distance_into_lap": "#222222",
         "meters_driven": 0,
         "column_index_track_clock": 1,
         "column_index_compass": 2,
         "column_index_elevation": 3,
         "column_index_odometer": 4,
+        "column_index_distance_into_lap": 5,
     },
     "damage": {
         "enable": True,
